# openGL_practice

./: Makefile  Makefile.in  autogen.sh  build-win64.sh  config.h  config.status  configure  configure.ac  configure.scan
Practice/: Practice.sln
Practice/Practice/: Practice.cpp  Practice.vcxproj  Practice.vcxproj.filters  Program.cpp  Shader.cpp  util.cpp
Practice/Practice/Debug/: vc120.idb
Practice/Practice/Debug/Practice.tlog/: CL.read.1.tlog  CL.write.1.tlog  Practice.lastbuildstate  cl.command.1.tlog
Practice/Practice/x64/Debug/: vc120.idb
Practice/Practice/x64/Debug/Practice.tlog/: CL.read.1.tlog  CL.write.1.tlog  Practice.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Practice/x64/Debug/: Practice.ilk  frag.glsl  updateShaders.sh
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
doc/: Makefile  Makefile.am  Makefile.in  README
examples/: Makefile  Makefile.in
linux/: auto_install.sh
linux/src/: CMakeLists.txt  Program.cpp  Shader.cpp  util.cpp
man/: Makefile  Makefile.am  Makefile.in
oglpg-8th-edition/: Makefile
scripts/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  helloGL  helloGL.cpp
src/.deps/: helloGL.Po
